# framework-esptux

./: .gitignore  CMakeLists.txt  README.md  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_check.yml
cores/: CMakeLists.txt
cores/ESPtux/: Arduino.h  Common.cpp  SPIChip.h  SimGPIO.h  SimI2C.cpp  SimSPI.cpp  Utility.cpp  itoa.cpp  logging.cpp  logging.h  main.cpp
cores/ESPtux/FS/: FS.cpp  FS.h  FSImpl.h  vfs_api.cpp
cores/portduino/: Arduino.cpp  Arduino.h  Common.cpp  LinuxHardwareSPI.cpp  LinuxSerial.cpp  LinuxSerial.h  PortduinoGPIO.cpp  PortduinoGPIO.h  PortduinoHardwareI2C.cpp  PortduinoHardwareI2C.h  PortduinoHardwareSPI.cpp  PortduinoHardwareSPI.h  PortduinoHardwareSerial.cpp  PortduinoHardwareSerial.h  PortduinoPrint.cpp  SPIChip.h  SimGPIO.cpp  SimGPIO.h  SimHardwareI2C.h  SimI2C.cpp  SimI2C.h  SimSPI.cpp  SimSPI.h  SimSerial.cpp  SimSerial.h  Utility.cpp  Utility.h  common.cpp  dtostrf.c  itoa.cpp  logging.cpp  logging.h  main.cpp
cores/portduino/FS/: FS.h  vfs_api.cpp  vfs_api.h
cores/portduino/linux/: LinuxCommon.cpp  LinuxHardwareSPI.cpp  LinuxSerial.cpp  millis.cpp
example/: CMakeLists.txt  test.cpp
example/WireScan/: CMakeLists.txt  WireScan.cpp  portuino.cpp
example/basic/: CMakeLists.txt  test.cpp
libraries/: CMakeLists.txt
libraries/SPI/: CMakeLists.txt
libraries/SPI/examples/: CMakeLists.txt
libraries/SPI/examples/SPI_Multiple_Buses/: CMakeLists.txt  SPI_Multiple_Buses.cpp  tux.cpp
libraries/SPI/src/: CMakeLists.txt  SPI.cpp  SPI.h  SPIChip.cpp  SPIChip.h
libraries/WiFi/examples/: CMakeLists.txt
libraries/WiFi/examples/SimpleWiFiServer/: CMakeLists.txt  SimpleWiFiServer.cpp  tux.cpp
libraries/WiFi/examples/WiFiClient/: CMakeLists.txt  WiFiClient.cpp  tux.cpp
libraries/WiFi/examples/WiFiScan/: CMakeLists.txt  tux.cpp
libraries/WiFi/examples/WiFiUDPClient/: CMakeLists.txt  WiFiUDPClient.cpp  tux.cpp
libraries/WiFi/src/: CMakeLists.txt  WiFi.cpp  WiFi.h  WiFiClient.cpp  WiFiClient.h  WiFiServer.cpp  WiFiServer.h  WiFiType.h  WiFiUdp.cpp  WiFiUdp.h  util.cpp  util.h
libraries/WiFi/src/utility/: debug.h  wifi_spi.h  wl_definitions.h
libraries/WiFi_/src/: WiFiServer.cpp
libraries/Wire/examples/: CMakeLists.txt
libraries/Wire/examples/WireMaster/: CMakeLists.txt  WireMaster.cpp  tux.cpp
libraries/Wire/examples/WireScan/: CMakeLists.txt  WireScan.cpp  tux.cpp
libraries/Wire/src/: CMakeLists.txt  Wire.cpp  Wire.h  WireDevice.cpp  WireDevice.h
