CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3)
PROJECT(Portduino)

SET(CMAKE_CXX_STANDARD 20)

ADD_DEFINITIONS(-DHOST)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE_DIRECTORIES(cores/arduino/api)
INCLUDE_DIRECTORIES(cores/portduino)
INCLUDE_DIRECTORIES(cores/portduino/FS)

ADD_SUBDIRECTORY(cores)
ADD_SUBDIRECTORY(example)
