CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3)
PROJECT(ESPtux)

SET(CMAKE_CXX_STANDARD 20)
ADD_COMPILE_OPTIONS(-Wall -Wextra -Werror)

ADD_DEFINITIONS(-DHOST)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE_DIRECTORIES(cores/arduino/api)
INCLUDE_DIRECTORIES(cores/ESPtux)
INCLUDE_DIRECTORIES(cores/ESPtux/FS)

ADD_SUBDIRECTORY(cores)

INCLUDE_DIRECTORIES(libraries/Wire/src)

ADD_SUBDIRECTORY(libraries)
ADD_SUBDIRECTORY(example)
